Add device type parameter to rest api
